--- a/config/database.yml
+++ b/config/database.yml
@@ -13,6 +13,17 @@ development:
   <<: *default
   database: db/development.sqlite3
 
+
+# Configuration pour MySQL
+mysql_development:
+  adapter: mysql2
+  encoding: utf8
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: myappuser
+  password: myapppassword
+  host: db
+  database: myappdb
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
